# goblinomincs

./: .coverage  .gitignore  LICENSE  README.md  analyze_market_data.py  cli.py  fetch_auction_data.py  lefthook.yml  market_data.py  pyproject.toml  pytest.ini  recipe_analysis.py
.agents/skills/code-review/: SKILL.md
.github/: copilot-instructions.md
.github/skills/code-review/: SKILL.md
.github/workflows/: ci.yml
data/: items.json  recipes.json  vendor_items.json
src/goblinomincs/: __init__.py  analyze_market_data.py  cli.py  data_loaders.py  display.py  fetch_auction_data.py  fetcher.py  json_loader.py  market_analysis.py  market_data.py  market_loader.py  recipe_analysis.py  vendor_items.py  vendor_prices.py
tests/: __init__.py  conftest.py  test_analyze_market_data.py  test_cli.py  test_data_loaders.py  test_display.py  test_fetcher.py  test_json_loader.py  test_market_analysis.py  test_market_data.py  test_market_loader.py  test_recipe_analysis.py  test_vendor_items.py  test_vendor_prices.py
tests/fixtures/data/: items.json  recipes.json
