[tool.poetry]
name = "goblinomincs"
version = "0.1.0"
description = ""
authors = ["vierimaa <o.vierimaa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.7"
plotly = "^6.3.1"
requests = "^2.32.5"
pandas = "^2.3.3"
typer = "^0.20.0"
rich = "^14.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
