[project]
name = "goblinomincs"
version = "0.1.0"
description = "World of Warcraft Classic auction house analysis tool"
authors = [{name = "vierimaa", email = "o.vierimaa@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.7",
    "plotly>=6.3.1",
    "requests>=2.32.5",
    "pandas>=2.3.3",
    "typer>=0.20.0",
    "rich>=14.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
goblinomincs = "goblinomincs.cli:main"
fetch-auction-data = "goblinomincs.fetch_auction_data:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["goblinomincs"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# Target Python 3.10+
target-version = "py310"
line-length = 88

# Source code directories
src = ["src", "tests"]

[tool.ruff.lint]
# Enable recommended rules plus common best practices
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
]

# Ignore specific rules that conflict with project style
ignore = [
    "E501",   # Line too long (handled by formatter)
    "SIM108", # Ternary operator (sometimes explicit if/else is clearer)
]

# Allow unused variables when they start with underscore
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__ files
"__init__.py" = ["F401"]
# Tests can use assert statements and have longer functions
"tests/**/*.py" = ["S101", "ARG001"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

[tool.coverage.run]
source = ["src/goblinomincs"]
omit = ["*/tests/*", "*/__pycache__/*", "*/.venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
